# myowobot

./: LICENSE  dashboard.py  main.py  pyproject.toml
attached_assets/: Pasted-import-discord-from-discord-ext-import-commands-import-openai-import-aiohttp-from-datetime-impor-1748855136524.txt
templates/: admin.html  base.html  dashboard.html  servers.html  status.html  user.html  users.html
