
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.3.0",
    "pymongo>=4.5.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "aiohttp>=3.8.0",
    "flask>=2.3.0",
    "openai>=1.82.1",
]
