[tool.poetry]
name = "myowobot"  # Change to your bot's name
version = "0.1.0"
description = "Your Discord Bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"  # Optional but recommended

[tool.poetry.dependencies]
python = ">=3.11"
discord-py = "^2.3.0"
pymongo = "^4.5.0"
requests = "^2.31.0"
pillow = "^10.0.0"
aiohttp = "^3.8.0"
flask = "^2.3.0"
openai = "^1.82.1"
google-generativeai = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"